# aim-py

./: .gitignore  Dockerfile  README.md  compose.yml  env.development  env.example  init.sh  prebuild.sh  pyproject.toml
.config/pypoetry/: pyproject.toml
.config/rclone/: rclone.conf.example
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pytest.ini  update_dependencies_template.md
.github/workflows/: build-deploy-on-release.yaml  build-main.yml  build-unstable.yaml  ci.yaml  docs.yaml  manual-deploy-production.yaml  manual-deploy-workshop.yaml  tests.yaml  update-dependencies.yaml
aim/: __main__.py  crud.py  main.py  models.py  schemas.py  services.py
aim/cli/: digifeeds.py  hathifiles.py  main.py
aim/digifeeds/: add_to_db.py  alma_client.py  check_zephir.py  db_client.py  functions.py  item.py  list_barcodes_in_bucket.py  move_to_pickup.py
aim/digifeeds/database/: alembic.ini  crud.py  main.py  models.py  schemas.py
aim/digifeeds/database/migrations/: env.py
aim/digifeeds/database/migrations/versions/: bbb334fc10e7_creating_initial_tables.py  c15f52a6ef8f_add_hathifiles_timestamp_column_to_item.py
aim/hathifiles/: client.py  main.py  poll.py
docs/: aim.cli.rst  aim.digifeeds.database.rst  aim.digifeeds.rst  aim.rst  conf.py  index.rst  modules.rst  sequence_diagram_update_ingested_items.md  uml_update_ingested_items.md  update_ingested_items.md
docs-old/: update_ingested_items.md
docs/api/: aim.cli.digifeeds.rst  aim.cli.hathifiles.rst  aim.cli.main.rst  aim.cli.rst  aim.digifeeds.add_to_db.rst  aim.digifeeds.alma_client.rst  aim.digifeeds.check_zephir.rst  aim.digifeeds.database.crud.rst  aim.digifeeds.database.main.rst  aim.digifeeds.database.models.rst  aim.digifeeds.database.rst  aim.digifeeds.database.schemas.rst  aim.digifeeds.db_client.rst  aim.digifeeds.functions.rst  aim.digifeeds.item.rst  aim.digifeeds.list_barcodes_in_bucket.rst  aim.digifeeds.move_to_pickup.rst  aim.digifeeds.rst  aim.hathifiles.client.rst  aim.hathifiles.main.rst  aim.hathifiles.poll.rst  aim.hathifiles.rst  aim.rst  aim.services.rst
docs/digifeeds/: confluence_diagrams.md  current_digifeeds_process.md  index.rst  new_process.md  old_digifeeds_process.md  overview.md
docs/future_projects/: index.rst
docs/future_projects/oclc_xrefs/: index.rst  xref_processing.md
docs/future_projects/patron_export/: index.md
docs/future_projects/update_ingested_items/: index.rst  uml_update_ingested_items.md  update_ingested_items.md
docs/hathifiles/: diagrams.md  index.rst
docs/oclc-stuff/: todo.md  xref_processing.md
hathifiles/: umich_small.db  umich_small.sql
python_starter/: models.py
tests/: conftest.py  test_blog.py  test_models.py  test_sample.py
tests/cli/: test_digifeeds.py  test_hathifiles.py  test_main.py
tests/digifeeds/: test_add_to_db.py  test_add_to_digifeeds_set.py  test_alma_client.py  test_check_zephir.py  test_db_client.py  test_functions.py  test_item.py  test_list_barcodes_in_bucket.py  test_move_to_pickup.py
tests/digifeeds/database/: test_crud.py  test_main.py  test_models.py
tests/digifeeds/integrations/: test_barcode_pruning.py
tests/fixtures/digifeeds/: item.json  item_list.json
tests/fixtures/hathifiles/poll/: hathi_file_list.json  hathi_file_list_store.json
tests/hathifiles/: test_client.py  test_poll.py
