[tool.poetry]
name = "aim"
version = "0.1.0"
description = "A CLI for the AIM team"
authors = ["Monique Rio <mrio@umich.edu>", "David Fulmer <dfulmer@umich.edu>"]
readme = "README.md"
packages = [{include = "aim"}]

[tool.poetry.scripts]
aim = "aim.cli.main:app"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
sqlalchemy = "^2.0.44"
mysqlclient = "^2.2.4"
fastapi = {extras = ["standard"], version = "^0.121.0"}
httpx = "^0.28.1"
alembic = "^1.17.1"
typer = "^0.20.0"
rclone-python = "^0.1.12"
structlog = "^25.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.3"
responses = "^0.25.3"
pytest-socket = "^0.7.0"
pytest-mock = "^3.15.1"
sphinx = "^8.0.2"
sphinx-rtd-theme = "^3.0.0"
sphinx-autobuild = "^2025.8.25"
myst-parser = "^4.0.0"
sphinxcontrib-mermaid = "^1.0.0"


[tool.pytest.ini_options]
#addopts = "--cov=aim --cov-report=html --cov-report=term:skip-covered --disable-socket --allow-unix-socket"
addopts = "--disable-socket --allow-unix-socket"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
