[tool.poetry]
name = "aim"
version = "0.1.0"
description = "A CLI for the AIM team"
authors = ["Monique Rio <mrio@umich.edu>", "David Fulmer <dfulmer@umich.edu>"]
readme = "README.md"
packages = [{include = "aim"}]

[tool.poetry.scripts]
aim = "aim.cli.main:app"

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.33.0"
sqlalchemy = "^2.0.48"
mysqlclient = "^2.2.8"
fastapi = {extras = ["standard"], version = "^0.135.2"}
httpx = "^0.28.1"
alembic = "^1.18.4"
typer = "^0.24.1"
rclone-python = "^0.1.24"
structlog = "^25.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.1.0"
ruff = "^0.15.8"
responses = "^0.26.0"
pytest-socket = "^0.7.0"
pytest-mock = "^3.15.1"
sphinx = "^8.0.2"
sphinx-rtd-theme = "^3.1.0"
sphinx-autobuild = "^2025.8.25"
myst-parser = "^5.0.0"
sphinxcontrib-mermaid = "^2.0.1"


[tool.pytest.ini_options]
#addopts = "--cov=aim --cov-report=html --cov-report=term:skip-covered --disable-socket --allow-unix-socket"
addopts = "--disable-socket --allow-unix-socket"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
