[tool.poetry]
name = "aim"
version = "0.1.0"
description = "A CLI for the AIM team"
authors = ["Monique Rio <mrio@umich.edu>", "David Fulmer <dfulmer@umich.edu>"]
readme = "README.md"
packages = [{include = "aim"}]

[tool.poetry.scripts]
aim = "aim.cli.main:app"

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.34.2"
sqlalchemy = "^2.0.51"
mysqlclient = "^2.2.8"
fastapi = {extras = ["standard"], version = "^0.138.1"}
httpx = "^0.28.1"
alembic = "^1.18.5"
typer = "^0.26.8"
rclone-python = "^0.1.24"
structlog = "^26.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-cov = "^7.1.0"
ruff = "^0.15.20"
responses = "^0.26.1"
pytest-socket = "^0.8.0"
pytest-mock = "^3.15.1"
sphinx = "^9.1.0"
sphinx-rtd-theme = "^3.1.0"
sphinx-autobuild = "^2025.8.25"
myst-parser = "^5.1.0"
sphinxcontrib-mermaid = "^2.0.2"


[tool.pytest.ini_options]
#addopts = "--cov=aim --cov-report=html --cov-report=term:skip-covered --disable-socket --allow-unix-socket"
addopts = "--disable-socket --allow-unix-socket"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
